# packages/uxbert/gamification/src/routes/api.php
@@ -49,12 +49,13 @@ Route::group(['namespace' => 'Uxbert\Gamification\Http\Controllers\API', 'prefix
 });
 
 Route::group(['namespace' => 'Uxbert\Gamification\Http\Controllers\API', 'prefix' => 'api/users', 'middleware' => 'api'], function () {
-    Route::post('create',           'UsersController@create_new_user');
-    Route::post('add_point',        'UsersController@add_points');
-    Route::post('actions_records',  'UsersController@action_records');
-    Route::post('get_leaderboards', 'UsersController@getLeaderboards');
-    Route::post('find_leaderboard', 'UsersController@findLeaderboard');
-    Route::post('get_balance',      'UsersController@getBalance');
+    Route::post('create',               'UsersController@create_new_user');
+    Route::post('add_point',            'UsersController@add_points');
+    Route::post('actions_records',      'UsersController@action_records');
+    Route::post('get_leaderboards',     'UsersController@getLeaderboards');
+    Route::post('find_leaderboard',     'UsersController@findLeaderboard');
+    Route::post('get_balance',          'UsersController@getBalance');
+    Route::post('get_featured_ranks',   'UsersController@featuredRanks');
 });
 
 
